  * osfunclin: getpackagelock: look also for UCS ; fixes #3189
  * oslindesktopfile:  DeleteShellLink: del hard in /usr/share/applications/ ; fixes #3402
  * osparser: getregistryvalue(<keystr>, <varstr> [, <access str>]) : string ; fixes #3279
  * osparser: powershellcall(<commandstr> [,<access str>='sysnative' [,<policy bool str>='true']]) : [void,str,stringlist] ; fixes #3442

-- Detlef Oertel <d.oertel@uib.de>  Wed, 14 Mar 2018:15:00:00 +0200

opsi-winst/opsi-script (4.12.0.15) stable; urgency=low

  * oswebservice: getMapOfLoginscripts2Run: fix: check not only for productId but also for productVersion and PackageVersion
  * oswebservice: getMapOfLoginscripts2Run: change logging to log_prog

-- Detlef Oertel <d.oertel@uib.de>  Fri, 09 Mar 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.14) stable; urgency=low

  * osparser: evaluateBoolean: sendlog: switch log append mode on
      in order to avoid that a final log removes this one
  * new function : getSubListByMatch(<search string>, <target list>) :stringlist
  * new function : getSubListByMatch(<search list>, <target list>) :stringlist
  * new function : getSubListByContaining(<search string>, <target list>) :stringlist
  * new function : getSubListByContaining(<search list>, <target list>) :stringlist
  * new function : getSubListByKey(<search string>, <target list>) :stringlist
  * new function : getSubListByKey(<search list>, <target list>) :stringlist
  * new function : getKeyList(<list>) :stringlist

-- Detlef Oertel <d.oertel@uib.de>  Tue, 13 Feb 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.13) stable; urgency=low

  * osparser: for-to loop: fix failure at for x to x loop
  * oslog: includelogtail: now log includelog at log level 7
  * new function getIndexFromListByContaining(<list> : stringlist,<search string> : string) : <number> : string
  * temporary set debug_lib always to true
  * osparser / osdefinedfunctions: call from a local function an other local function